kubernetes/monitoring-nodeport.yaml
---
# NodePort Service for Prometheus (port 30090)
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
  labels:
    app: prometheus
spec:
  selector:
    app.kubernetes.io/name: prometheus
  ports:
  - name: web
    port: 9090
    targetPort: 9090
    nodePort: 30090
    protocol: TCP
  type: NodePort

---
# NodePort Service for Grafana (port 30300)
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - name: service
    port: 3000
    targetPort: 3000
    nodePort: 30300
    protocol: TCP
  type: NodePort

---
# NodePort Service for AlertManager (port 30093)
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-nodeport
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
  - name: web
    port: 9093
    targetPort: 9093
    nodePort: 30093
    protocol: TCP
  type: NodePort
